tests/ui/consts/issue-66693.stderr
error: argument to `panic!()` in a const context must have type `&str`
  --> $DIR/issue-66693.rs:4:15
   |
LL | const _: () = panic!(1);
   |               ^^^^^^^^^

error: argument to `panic!()` in a const context must have type `&str`
  --> $DIR/issue-66693.rs:7:19
   |
LL | static _FOO: () = panic!(true);
   |                   ^^^^^^^^^^^^

error[E0080]: evaluation panicked: explicit panic
  --> $DIR/issue-66693.rs:16:15
   |
LL | const _: () = panic!();
   |               ^^^^^^^^ evaluation of constant value failed here

error[E0080]: evaluation panicked: panic in static
  --> $DIR/issue-66693.rs:18:19
   |
LL | static _BAR: () = panic!("panic in static");
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of static initializer failed here

error: argument to `panic!()` in a const context must have type `&str`
  --> $DIR/issue-66693.rs:11:5
   |
LL |     panic!(&1);
   |     ^^^^^^^^^^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0080`.
